# schema-gen

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .python-version  .readthedocs.yaml  .readthedocs.yml  .renovaterc  .schema-gen.config.py  .uv.toml  CONTRIBUTING.md  Dockerfile.validation  LICENSE  PUBLISHING.md  README.md  build.sh  dependencies.json  docker-compose.validation.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  renovate.json  renovate.json5  ruff.toml
.github/: renovate.json5
.github/workflows/: ci.yml  comprehensive-test.yml  dependency-check.yml  publish.yml  schema-check.yml  version-compatibility.yml
docs/: api-reference.md  cli-reference.md  configuration.md  dependency_management.md  docker-validation.md  examples.md  getting-started.md  index.md  publishing.md  renovate.md  requirements.txt  schema-format.md
docs/generators/: pydantic.md  rust.md
examples/: custom_validation_example.py  target_specific_meta_example.py  user_schema.py
schemas/: user.py
scripts/: check_compatibility.py  check_dependency_versions.py  publish.py  test_all_formats.sh  test_python_formats.py  update_dependencies.py  validate-in-docker.sh  validate_all_formats.py
src/schema_gen/: __init__.py
src/schema_gen/cli/: __init__.py  main.py
src/schema_gen/core/: config.py  generator.py  schema.py  usr.py
src/schema_gen/diff/: __init__.py  baseline.py  comparator.py  formatter.py  rules.py
src/schema_gen/generators/: __init__.py  avro_generator.py  base.py  dataclasses_generator.py  docs_generator.py  graphql_generator.py  jackson_generator.py  jsonschema_generator.py  kotlin_generator.py  pathway_generator.py  protobuf_generator.py  pydantic_generator.py  registry.py  rust_generator.py  sqlalchemy_generator.py  typeddict_generator.py  zod_generator.py
src/schema_gen/parsers/: schema_parser.py
src/schema_gen/registry/: __init__.py  index.py
tests/: __init__.py  test-matrix.yml  test_cleandoc_class_docstrings.py  test_cli_basic.py  test_config_wiring.py  test_description_quotes_and_enum_docstrings.py  test_deterministic_ordering.py  test_diff.py  test_docs_generator.py  test_e2e_compile.py  test_field_tags.py  test_format_validation.py  test_generator_correctness_invariants.py  test_generator_factory.py  test_generator_framework_execution.py  test_generator_output_stability.py  test_generators.py  test_integration.py  test_optional_enum.py  test_optional_list.py  test_pipe_union.py  test_production_readiness.py  test_pydantic_config.py  test_pydantic_typing_imports.py  test_registry.py  test_rust_generator.py  test_shared_enums.py  test_simple.py  test_usr_validation.py  test_version_compatibility.py  test_zod_commas.py  test_zod_dict_imports.py  test_zod_imports.py
tests/golden_outputs/: avro_canonical_order.avsc  dataclasses_canonical_order.py  graphql_canonical_order.graphql  jackson_canonical_order.java  jsonschema_canonical_order.json  kotlin_canonical_order.kt  pathway_canonical_order.py  protobuf_canonical_order.proto  pydantic_canonical_order.py  rust_canonical_order.rs  sqlalchemy_canonical_order.py  typeddict_canonical_order.py  zod_canonical_order.ts
